# webots_diffdrive

./: CMakeLists.txt  README.md  custom_robot_driver.xml  package.xml
config/: nav2_params_robot1.yaml  nav2_params_robot2.yaml  robot1_ros2control.yml  robot2_ros2control.yml  slam_toolbox_params.yaml
include/webots_diffdrive/: CustomRobotDriver.hpp
launch/: custom_bot_launch.launch.py  nav2_multi_robot_launch.launch.py  robot_launch.launch.py  turtlebot_launch.launch.py
resource/: custom_bot.urdf  custom_robot.urdf  my_robot.urdf  robot1.urdf  robot2.urdf  turtlebot1.urdf  turtlebot1_nav2_params.yaml  turtlebot1_ros2control.yml
src/: CustomRobotDriver.cpp  LidarTfBroadcaster.cpp  MyRobotDriver.cpp  SensorTfBroadcaster.cpp
turtlebot3_cartographer_custom/: CHANGELOG.rst  CMakeLists.txt  package.xml
turtlebot3_cartographer_custom/config/: turtlebot3_lds_2d.lua
turtlebot3_cartographer_custom/launch/: cartographer.launch.py  occupancy_grid.launch.py
turtlebot3_cartographer_custom/rviz/: tb3_cartographer_2.rviz
turtlebot3_navigation2_custom/: CHANGELOG.rst  CMakeLists.txt  package.xml
turtlebot3_navigation2_custom/launch/: navigation2.launch.py
turtlebot3_navigation2_custom/param/: burger.yaml
turtlebot3_navigation2_custom/rviz/: tb3_navigation2_1.rviz  tb3_navigation2_2.rviz
webots_diffdrive/: package.xml
webots_diffdrive/launch/: custom_bot_launch.launch.py  turtlebot_multi_launch.launch.py
webots_diffdrive/resource/: custom_bot_1_ros2control.yml  custom_bot_2_ros2control.yml  custom_bot_ros2control.yml  turtlebot_example_map.yaml  turtlebot_multi.urdf  turtlebot_multi_nav2_params.yaml  turtlebot_multi_ros2control.yml
webots_diffdrive/worlds/: CustomBot.proto  TurtlebotProto.proto  turtlebot_multi_world.wbt
webots_diffdrive/worlds/meshes/: axle_link.dae  base_link.STL  base_link.dae  caster_axle.STL  caster_axle.dae  caster_wheel.STL  caster_wheel.dae  spinwheel_link.dae
worlds/: CustomBot.proto  custom_world.wbt  custom_world_casters.wbt  my_world.wbt  turtlebot_world.wbt
worlds/meshes/: base_link.dae  wheel_link.dae
